# ia-ml-anomaly-detection-infra-docker_V_02

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
ad_hoc/: README.md  runtime_modes.py
anomaly_detector/: README.md  streaming_detector.py
artifacts/registry/: model_registry_manifest_v0_1.json
configs/scenarios/: baseline_nominal_v0_1.yaml  latency_propagation_jitter_v0_1.yaml  scenario_schema_v0_1.yaml
contracts/: agent_decision_v0_1.json  audit_event_v0_1.json  cluster_decision_v0_1.json  confidence_vector_v0_1.json  context_slice_v0_1.json  ml_feature_vector_v0_1.json  otel_trace_event_v0_1.json
docs/specs/: agent_decision_contract_v0_1.md  artifact_naming_policy_v0_1.md  audit_event_contract_v0_1.md  confidence_vector_contract_v0_1.md  context_slice_contract_v0_1.md  ml_feature_contract_v0_1.md  otel_trace_contract_v0_1.md  pre_hoc_ad_hoc_architecture_v0_1.md  redis_streaming_inference_v0_1.md  scenario_library_contract_v0_1.md  system_v02_overview.md  v03_readiness_v0_1.md
infra/flink/: README.md
infra/k8s/: README.md
infra/kafka/: README.md
infra/prometheus/: README.md
infra/redis/: README.md
pre_hoc/: README.md  build_dataset.py  generate_training_data.py  train_models.py
scenario_library/: README.md  __init__.py  loader.py  noise.py
services/: README.md
services/checkout-api/: README.md
services/orders-api/: README.md
services/payments-api/: README.md
services/redis-broker/: README.md
tests/contracts/: contract_test_utils.py  test_agent_decision_contract.py  test_audit_event_contract.py  (+5 more)
(+5 files in other folders)
