[project]
name = "industrial-sandbox-v-02"
version = "0.1.0"
description = "OTel-first agentic observability layer for industrial anomaly propagation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
